# modmail-bot

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  walkthrough.md
bot/: config.py
bot/actions/: executor.py
bot/ai/: judge.py  schemas.py
bot/ai/providers/: anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
bot/core/: events.py  models.py  thread_manager.py
bot/gateway/: bot.py
bot/gateway/cogs/: moderation.py  modmail.py
bot/persistence/: cache.py  database.py
bot/persistence/migrations/: 001_initial.sql
bot/persistence/repositories/: thread_repo.py
tests/: test_ai_judge.py
